--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="../voices/maintheme.mp3" type="audio/mpeg">
+        <source src="maintheme.mp3" type="audio/mpeg">
     </audio>
 
     <div id="app">
